--- a/Mispollos/appsettings.json
+++ b/Mispollos/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "IdRolAdmin": "a4c50173-f674-42ae-8959-5b8e2b773148",
+    "Secret": "mis_pollos_secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
