Autenticacion por rol añadido en metodo de UserController.cs

--- a/Mispollos/appsettings.json
+++ b/Mispollos/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
-    "IdRolAdmin": "974ADD88-A622-400A-AC51-9C8CC462ED9A",
+    "IdRolAdmin": "094AE092-6F85-4016-9ABB-F6B742FD550E",
+    "IdRolUser": "974ADD88-A622-400A-AC51-9C8CC462ED9A",
     "Secret": "mis_pollos_secret"
   },
   "Logging": {
